<resources>
    <string name="app_name">TourismApp</string>
    <string name="logo_app">Logo Aplikasi</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="photo_of_the_place">photo of the place</string>
    <string-array name="desc">
        <item>Arau Mini Waterpark merupakan tempat wisata baru di Kota Padang.
        Berlokasi di tepi Batang Arau, tepat di sebelah Bank Mandiri. Menyediakan berbagai
        wahana air seperti ember pecah, Racer and Spiral Slides, juga Semi Olympic Swimming Pool.
        Tersedia cafe dengan menu yg lezat, tempat penitipan barang berupa loker yang aman,
        serta lapangan parkir yang luas.

        Alamat
        Batang Arau
        Jl. Batang Arau No. 44-48, Pondok, Padang Barat, Kp. Pd., Padang Bar., Kota Padang, Sumatera Barat 25137
        Padang
        Sumatera Barat</item>
        <item>Letaknya berada di seberang selatan dari muara Sungai Batang Arau dan termasuk dalam
        wilayah Kecamatan Padang Selatan. Sebuah bukit kecil dengan ketinggian puncak sekitar
        80 meter di atas permukaan laut. Masyarakat Kota Padang menamainya Gunung Padang karena
        bukit ini bisa dikatakan tempat tertinggi di sekitar pusat kota yang terkenal dengan
        kuliner rendang sebagai andalannya ini. Gunung Padang menyimpan kombinasi antara
        panorama yang indah, legenda cinta, dan sepenggal sejarah masa pendudukan Jepang.

        Untuk menjangkau kawasan wisata ini, kita bisa menyeberang melewati Jembatan Siti Nurbaya kemudian
        mengambil jalan ke kiri. Jalan ini akan membawa kita ke pintu gerbang kawasan wisata
        Gunung Padang.

        Dari gerbang, kita bisa langsung membeli tiket ke loket yang dikelola oleh masyarakat setempat.
        Jika memerlukan panduan guide, penjaga loket juga akan membantu mencarikannya untuk
        kita. Keberadaan guide akan membantu memberikan informasi dan kisah-kisah seputar
        Gunung Padang, sehingga kita bisa mendapatkan lebih dari sekedar panorama indah di
        puncaknya.

        Dari gerbang, kita akan menyusuri jalan setapak menanjak hingga ke puncak, kurang lebih 15- 30
        menit perjalanan. Di sisi kiri jalan, beberapa kali akan kita temukan sisa bunker
        peninggalan masa pendudukan Jepang.

        Pada sisi kanan menjelang puncak, kita dapat menemukan sebuah celah batu dengan tangga menurun.
        Menurut keterangan salah seorang pemandu, lorong ini adalah lokasi makam dari Siti
        Nurbaya, tokoh utama dari sebuah kisah legendaris Minangkabau.

        Siti Nurbaya dikenal umum sebagai sebuah karakter fiktif dalam roman klasik \'Siti Nurbaya: Kasih
        Tak Sampai\' karya pujangga Marah Rusli. Roman yang kental dengan nuansa budaya
        Minangkabau ini menceritakan kisah cinta Siti Nurbaya dan Samsul Bahri yang diputuskan
        oleh takdir.

        Samsul dipaksa pergi ke Batavia, sedangkan Siti Nurbaya akhirnya terpaksa menikah dengan Datuk
        Meringgih karena jeratan hutang orang tua. Siti Nurbaya diceritakan tewas dibunuh
        suaminya, sedangkan Meringgih sendiri akhirnya mati di tangan Samsul yang kemudian
        juga terbunuh karena terluka parah dalam pertarungan.

        Setelah melewati makam Siti Nurbaya, sampailah kita ke Puncak Bukit Padang. Kita akan disambut
        sebuah taman luas yang diberi nama Taman Siti Nurbaya, sesuai dengan nama orang yang
        dimakamkan di dekatnya. Taman ini dihiasi pepohonan rindang yang membuat suasana di
        sekitarnya senantiasa teduh meski matahari sedang terik di tengah hari. Suasana ini
        akan membawa pikiran kita untuk bersantai sejenak dan menikmati panorama indah di
        sekelilingnya.

        Taman Siti Nurbaya memang merangkum lengkap berbagai panorama indah yang ada di sekitarnya. Di
        sebelah utara dan timur, terhampar pemandangan Kota Padang dan Jembatan Siti Nurbaya
        dari kejauhan. Bergerak sedikit ke selatan, kita akan melihat hamparan Pantai Air Manis
        beserta Pulau Pisang Kecil dan Pulau Pisang Besar. Sementara, di sisi barat, terhampar
        bentangan luas dan birunya Samudera Hindia yang akan terlihat indah ketika hari
        menjelang senja.</item>
        <item>Tempat wisata ini memang dirancang untuk kolam renang anak-anak dengan seluncuran
            favoritnya yang memiliki ketinggian 25 meter. Di tempat ini juga tersedia seluncuran
            mini dengan ketinggian yang lebih rendah yaitu 15 meter sehingga anak-anak bisa memilih
            sesuai keberaniannya.

        Untuk kolam renang anak disediakan berbagai permaianan air yang seru sehingga liburan terasa
            semakin  menyenangkan.</item>
        <item>Kolam renang ini terletak di ketinggian 1000M di atas permukaan laut, kalau kita
            berjalan dari By pass teluk Bayur sampai di persimpangan Lubuk Minturun ( lampu Merah )
            kelok kiri , terus saja berjalan nanti kita akan di melewati tempat penjualan bunga,
            sampai di sebuah persimpangan 3. yang kanan menuju Lokasi Manasik Haji di Miniatur
            Makkah dan belok ke kiri menuju tempat pemandian Lubuk minturun atau menuju ke arah
            jembatan / Lori. Sehabis lewat jembatan ada 2 simpang yang kiri ke kampung Buruk /
            sungai Bangek dan yang belok kanan menuju kolam renang ABG atau jalan yang tembus ke
            Solok.
            jalannya agak pendakian landai tapi suasana alami akan terasa dengan ukuran jalan sekitaran
            3M atau pas 2 Mobil selisih, tapi jalan saat saya ke sana cukup bagus karena sudah d
            i aspal, karena dahulu saya ke sana jalan masih berbatuan.
            sekitaran 1-2Km dari simpang bawah kita akan menemukan pintu masuk ke kolam renang Abg/
            ada spanduknya.</item>
        <item>Masjid Raya Sumatra Barat adalah masjid terbesar di Sumatra Barat yang terletak di
            Jalan Khatib Sulaiman, Kecamatan Padang Utara, Kota Padang. Diawali peletakan batu
            pertama pada 21 Desember 2007, pembangunannya tuntas pada 4 Januari 2019 dengan total
            biaya sekitar Rp325–330 miliar, sebagian besar menggunakan dana APBD Sumatra Barat.
            Pengerjaannya dilakukan secara bertahap karena keterbatasan anggaran dari provinsi.

            Konstruksi masjid terdiri dari tiga lantai. Ruang utama yang dipergunakan sebagai ruang
            salat terletak di lantai atas, memiliki teras yang melandai ke jalan. Denah masjid
            berbentuk persegi yang melancip di empat penjurunya, mengingatkan bentuk bentangan kain
            ketika empat kabilah suku Quraisy di Mekkah berbagi kehormatan memindahkan batu Hajar
            Aswad. Bentuk sudut lancip sekaligus mewakili atap bergonjong pada rumah adat
            Minangkabau rumah gadang.

            Masjid Raya Sumatra Barat menurut rencana dibangun dengan biaya sedikitnya Rp500
            miliar karena rancangannya didesain dengan konstruksi tahan gempa. Kerajaan Arab Saudi
            pernah mengirim bantuan sekitar Rp500 miliar untuk pembangunan masjid, tetapi karena
            terjadi gempa bumi pada 2009, peruntukan bantuan dialihkan oleh pemerintah pusat untuk
            keperluan rehabilitasi dan rekonstruksi di Sumatra Barat. Pada 2015, Wakil Presiden RI
            Jusuf Kalla meminta anggaran pembangunan dipangkas. Pemangkasan anggaran membuat
            desain masjid berubah di tengah jalan, termasuk jumlah menara dari awalnya empat
            menjadi satu.</item>
        <item>Masjid Baiturrahmah mulai dibangun pada 2015 atas usulan dari anak pemilik Yayasan
            Baiturrahmah.

            Saat itu terdapat masjid Jabal Rahmah yang berada di bagian belakang kampus Universitas
                        Baiturrahmah dengan daya tampung hanya 600 orang.

            Karena setiap Jumat selalu membludak dan tidak tertampung akhirnya diusulkan untuk membangun
                        masjid Baiturrahmah yang dibiayai sepenuhnya oleh keluarga pendiri Yayasan Pendidikan
                        Baiturrahmah H Amran.

            Kini karena keindahan arsitekturnya selain menjadi tempat ibadah, masjid ini juga menjadi salah
            satu tujuan wisata religi untuk menikmati keelokan dan kemegahan bangunannya.</item>
        <item>Jembatan Sitti Nurbaya adalah jembatan yang membentang sepanjang 156 meter di atas
            sungai Batang Arau, Kota Padang, Sumatra Barat. Jembatan ini menghubungkan pusat kota
            dengan Seberang Padang. Mengambil nama dari novel klasik Sitti Nurbaya karya Marah
            Rusli, jembatan ini adalah akses menuju Gunung Padang, salah satu latar tempat Sitti
            Nurbaya.

            Dibangun sejak tahun 1995, pembangunan jembatan menghabiskan biaya Rp19,8 miliar dari anggaran
            pemerintah daerah dan pemerintah pusat, dibantu oleh Asian Development Bank (ADB) dan
            Overseas Economic Cooperation Fund (OECF). Penggunaannya diresmikan pada pertengahan
            tahun 2002, ditandai dengan kehadiran pemeran drama televisi Sitti Nurbaya HIM Damsyik,
            Novia Kolopaking, dan Gusti Randa.</item>
        <item>Museum Adityawarman adalah museum budaya provinsi Sumatra Barat yang terletak di Kota
            Padang. Museum ini diresmikan pada 16 Maret 1977 mengambil nama besar salah seorang
            raja Malayapura pada abad ke-14, Adityawarman yang sezaman dengan Kerajaan Majapahit.
             Museum ini memiliki julukan Taman Mini ala Sumatra Barat.

            Konstruksi museum dikerjakan pada 1974. Bangunan museum berada di areal lebih kurang 2,6 hektare
            dengan luas bangunan sekitar 2.854,8 meter persegi. Peresmian museum ditandai oleh
            Menteri Pendidikan dan Kebudayaan Republik Indonesia Prof. Dr. Syarif Thayeb.
            Selanjutnya, museum ini diberi nama Museum Negeri Adityawarman Sumatra Barat berdasarkan
            Surat Keputusan Menteri No.093/0/1979 tanggal 28 Mei 1979.

            Sebagai museum budaya, Museum Adityawarman menyimpan dan melestarikan benda-benda bersejarah,
            seperti cagar budaya Minangkabau dan sekitarnya beserta beberapa cagar budaya nasional.
            Salah satu di antaranya adalah bangunan yang berarsitektur Minang, bernama Rumah
            Bagonjong atau Baanjuang.</item>
        <item>Pantai Air Manis atau Pantai Aia Manih dalam bahasa Minang adalah pantai yang terletak
            kurang lebih 10 km ke selatan dari pusat Kota Padang. Lokasinya Berada di belakang
            Gunung Padang atau tepatnya di Kecamatan Padang Selatan, Kota Padang.</item>
        <item>Pantai Padang atau populer dengan sebutan Taplau (singkatan dari tapi lauik, bahasa Minang yang artinya tepi laut) adalah sebuah pantai yang terletak di Kota Padang, Sumatra Barat. Pantai ini terletak pada kawasan padat perkotaan di Kecamatan Padang Barat, dan membentang dari daerah Purus hingga muara Batang Arau. Pantai ini berjarak kurang lebih 23 km dari Bandar Udara Internasional Minangkabau atau 30 menit perjalanan darat dengan mobil.</item>
    </string-array>
    <string name="lokasi">Lokasi :</string>
    <string name="satelite">Satelite</string>
    <string name="hybrid">Hybrid</string>
    <string name="terain">Terain</string>
    <string name="normal">Normal</string>
    <string name="transaction">Transaksi</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="destination">Destination</string>
    <string name="select_destination">Pilih Destinasi</string>
    <string name="submit">Submit</string>
    <string name="report">Report</string>
    <string name="date">Tanggal</string>
</resources>