<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/satellite_map"
        android:title="@string/satelite"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"/>

    <item android:id="@+id/hybrid_map"
        android:title="@string/hybrid"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"/>

    <item android:id="@+id/terrain_map"
        android:title="@string/terain"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"/>

    <item android:id="@+id/normal_map"
        android:title="@string/normal"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"/>
</menu>