<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.offline.DetailTransaksiOfflineActivity">

    <TextView
        android:id="@+id/txt_title_detail_transaction_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txt_name_detail_transaction_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_title_detail_transaction_off"/>
    <TextView
        android:id="@+id/txt_name_content_transaction_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/name"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_name_detail_transaction_off"/>

    <TextView
        android:id="@+id/txt_email_detail_transaction_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_name_content_transaction_off"/>
    <TextView
        android:id="@+id/txt_email_content_transaction_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/email"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_email_detail_transaction_off"/>

    <TextView
        android:id="@+id/txt_dest_detail_transaction_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_email_content_transaction_off"/>
    <TextView
        android:id="@+id/txt_dest_content_transaction_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/destination"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_dest_detail_transaction_off"/>

    <TextView
        android:id="@+id/txt_date_detail_transaction_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_dest_content_transaction_off"/>
    <TextView
        android:id="@+id/txt_date_content_transaction_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/date"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_date_detail_transaction_off"/>


</RelativeLayout>